--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="128x128" href="../src/img/app_icon.png">
   <link rel="icon" href="../src/img/app_icon.png">
+    <script src="https://e-cdn-files.dzcdn.net/js/min/dz.js"></script>
 
   <title>SoundDemocrat</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,6 +13,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="dz-root"></div>
     <script type="module" src="index.js"></script>
   </body>
+
 </html>
